@@ -7,6 +7,7 @@
 - 功能变化
   * util/cache/list _$addItem 接口支持批量添加列表项
   * util/ajax/tag 模块 _$loadHtml 接口需要跨域载入的时候采用 ajax 先加载文本再解析内容
+  * NEJ.define 处理过程忽略 NEJ 模板封装脚本，即 type="nej/*" 的 script 标签
 
 0.4.3   (2017-06-26)
 --------------------------------------------------------
